# hdagentcore-enhanced

./: .env.example  .gitignore  AUTHORS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PROJECT-DEVELOPMENT-PHASE-TRACKING.md  PROJECT-detail.md  README.md  SECOND-KNOWLEDGE-BRAIN.md  SECURITY.md  SUPPORT.md  idea.txt  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
agent/: main.py  orchestrator.py
agent/memory/: memory_manager.py
agent/modules/: config.py  eval_benchmark.py  mcp_manager.py  pattern_library.py  provider_adapter.py
ai_layer/patches/: agentcore_ai_integration.md
config/: .env.example  agent_config.yaml
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  patterns.md
tests/: test-scenarios.md  test_agent.py
tools/: hf_model_manager.py  knowledge_updater.py  llm_client.py
upstream/: README.md
