[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcore-enhanced"
version = "1.0.0"
description = "Provider-portable multi-cloud agent orchestrator with self-evaluating benchmark, MCP integration, and daily research self-learning"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "agentcore-enhanced contributors", email = "contributor@example.com"}
]
maintainers = [
    {name = "agentcore-enhanced maintainers", email = "maintainer@example.com"}
]
keywords = [
    "agent",
    "orchestrator",
    "multi-cloud",
    "llm",
    "anthropic",
    "openai",
    "azure",
    "gcp",
    "ollama",
    "mcp",
    "model-context-protocol",
    "benchmark",
    "evaluation",
    "semantic-search",
    "huggingface",
    "research",
    "self-learning"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    # Core framework
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "click>=8.1.7",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.0.0",

    # Async
    "aiohttp>=3.11.9",
    "aiofiles>=24.0.0",

    # LLM providers
    "anthropic>=0.40.0",
    "openai>=1.55.3",

    # HuggingFace / ML
    "sentence-transformers>=3.3.1",
    "transformers>=4.47.0",
    "torch>=2.5.1",
    "faiss-cpu>=1.9.0",
    "numpy>=1.26.4",

    # Scheduling
    "apscheduler>=3.10.4",

    # Tool implementations
    "duckduckgo-search>=6.3.7",
    "jsonschema>=4.23.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",

    # Code quality
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "isort>=5.13.0",

    # Pre-commit
    "pre-commit>=3.8.0",

    # Documentation
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",

    # Type stubs
    "types-aiofiles>=24.0.0",
    "types-requests>=2.32.0",
]

gcp = [
    "google-cloud-aiplatform>=1.71.1",
    "google-auth>=2.34.0",
]

all = [
    "agentcore-enhanced[dev,gcp]"
]

[project.urls]
Homepage = "https://github.com/yourusername/agentcore-enhanced"
Documentation = "https://agentcore-enhanced.readthedocs.io"
Repository = "https://github.com/yourusername/agentcore-enhanced"
Issues = "https://github.com/yourusername/agentcore-enhanced/issues"
Discussions = "https://github.com/yourusername/agentcore-enhanced/discussions"
Changelog = "https://github.com/yourusername/agentcore-enhanced/blob/main/CHANGELOG.md"

[project.scripts]
agentcore = "agent.main:cli"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "tools*"]
exclude = ["tests*", "docs*", "docker*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.yml", "*.yaml"]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # Directories to exclude
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''

[tool.ruff]
target-version = "py312"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # Pylint
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",    # Line too long (handled by black)
    "B008",    # Do not perform function calls in argument defaults
    "C901",    # Too complex
    "PLR0913", # Too many arguments
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used in comparison
    "UP007",   # Use X | Y for type annotation (for Python 3.9 compat)
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "docs",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG", "PLR2004"]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["agent", "tools"]
force-sort-within-sections = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "anthropic.*",
    "openai.*",
    "aiohttp.*",
    "faiss.*",
    "transformers.*",
    "sentence_transformers.*",
    "duckduckgo_search.*",
    "apscheduler.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=agent",
    "--cov=tools",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["agent", "tools"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
precision = 2

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # Allow assert in production code

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pdm]
distribution = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["agent", "tools"]

[tool.hatch.build.targets.sdist]
include = [
    "/agent",
    "/tools",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]
